--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Developer Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Press Start 2P', cursive;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Game Developer</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
-<body class="bg-black text-white">
-    <header class="flex justify-between items-center p-6">
-        <div class="text-2xl font-bold">MBULSDEV</div>
-        <nav class="space-x-8">
-            <a href="#" class="text-white hover:text-red-500">HOME</a>
-            <a href="#" class="text-gray-400 hover:text-white">GAMES</a>
-            <a href="#" class="text-gray-400 hover:text-white">PROJECT</a>
-            <a href="#" class="text-gray-400 hover:text-white">ABOUT ME</a>
-            <a href="#" class="text-gray-400 hover:text-white">CONTACT</a>
-        </nav>
-    </header>
-    <main class="flex flex-col items-center justify-center h-screen text-center">
-        <h1 class="text-6xl md:text-8xl font-bold mb-4">I AM A</h1>
-        <h1 class="text-6xl md:text-8xl font-bold mb-4">GAME DEVELOPER</h1>
-        <p class="text-xl md:text-2xl">I MAKE RPG, ACTION, ADVENTURE</p>
-        <p class="text-xl md:text-2xl">THEMED GAMES</p>
-    </main>
+<body>
+  <header>
+    <div class="logo">MBULSDEV</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="Home" class="active">HOME</a></li>
+        <li><a href="Games">GAMES</a></li>
+        <li><a href="Project">PROJECT</a></li>
+        <li><a href="About Me">ABOUT ME</a></li>
+        <li><a href="Contact">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <a class="Main_Text">
+    <h1>I AM A <br> GAME DEVELOPER</h1>
+    <p>I MAKE RPG, ACTION, ADVENTURE <br> THEMED GAMES</p>
+</a>
+  </main>
 </body>
 </html>
