--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo">MBULSDEV</div>
     <nav>
       <ul class="nav-links">
-        <li><a href="Home" class="active">HOME</a></li>
+        <li><a href="index.html" class="active">HOME</a></li>
         <li><a href="Games">GAMES</a></li>
         <li><a href="Project">PROJECT</a></li>
         <li><a href="About Me">ABOUT ME</a></li>
